--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="device_name">Device Name</string>
     <string name="details">Details</string>
     <string name="refresh">Refresh</string>
+    <string name="state">State</string>
 </resources>
